# ai-knowledge-agent

./: .env.example  .gitignore  README.md  knowledge-graph.md  mvp-todo.md  package-lock.json  package.json  pyproject.toml
data/raw/: knowledge-agent-cn.md  product-brief.md  rag-design.md
docs/: goal.md  llm-access-plan.md  migration-notes.md  stitch-ui-design.md  windows-package.md
evals/: questions.json
scripts/: ask.ps1  dev-run.ps1  eval.ps1  frontend-smoke.ps1  frontend_smoke.py  generate-stitch-ui.mjs  index.ps1  package.ps1  smoke.ps1  web.ps1
src/ai_knowledge_agent/: auto_index.py  cli.py  codex_accounts.py  codex_oauth.py  codex_proxy.py  codex_tokens.py  config.py  credentials.py  document_sources.py  embeddings.py  evaluation.py  fuel_pool.py  generation.py  ingestion.py  llm_access.py  models.py  providers.py  retrieval.py  services.py  store.py  text.py  web.py
src/ai_knowledge_agent/static/: app.js  index.html  styles.css
tests/: test_auto_index.py  test_chinese_retrieval.py  test_chunking.py  test_codex_oauth.py  test_codex_proxy.py  test_config.py  test_embeddings.py  test_evaluation.py  test_fuel_pool.py  test_generation.py  test_llm_access.py  test_retrieval.py  test_services.py  test_store.py  test_web.py
