[project]
name = "ai-knowledge-agent"
version = "0.1.0"
description = "Local-first personal knowledge-base agent with citation-backed retrieval."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]

[project.optional-dependencies]
dev = ["httpx>=0.28.0", "playwright>=1.60.0", "pytest>=8.0", "ruff>=0.8.0"]

[project.scripts]
aka = "ai_knowledge_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
